# Vis_control_v2

./: .gitignore  README.md  layer3_main_window.txt  layer3_row_grouping.txt  pyproject.toml
config/: default.yaml  local.yaml
scripts/: generate_test_images.py  simulate_plc.py
tests/: test_camera.py  test_config.py  test_detection.py  test_event_log.py  test_profiles.py  test_security.py  test_state_machine.py
translations/: viscontrol_de.ts
viscontrol/: __init__.py  __main__.py  main.py  plc_test.py  vis_control_plc.py
viscontrol/core/: __init__.py  config.py  event_log.py  events.py  logger.py  profiles.py  security.py  state_machine.py
viscontrol/detection/: __init__.py  base.py  calibration.py  classical.py  column_learning.py  pipeline.py  proximity_clustering.py  row_grouping.py
viscontrol/io/: __init__.py  camera.py  opcua_server.py  plc_client.py  recorder.py  storage.py  video_recorder.py  web_server.py
viscontrol/ui/: __init__.py  i18n.py  main_window.py  theme.py
viscontrol/ui/views/: __init__.py  capture_view.py  inference_view.py  review_view.py  service_view.py  wizard_view.py
viscontrol/ui/widgets/: __init__.py  camera_view.py  recent_defects.py  sidebar.py  signal_pill.py  stat_card.py  state_banner.py  status_bar.py
